fixed bug: padding on small buttons not present on some browsers

--- a/styles/components/Button.module.scss
+++ b/styles/components/Button.module.scss
@@ -16,6 +16,7 @@ $button-types: (
   font-size: 1rem;
   text-decoration: none;
   cursor: pointer;
+  z-index: 1;
   line-height: 1;
 
   &:hover {
@@ -28,17 +29,8 @@ $button-types: (
   }
 
   &.btn_icon {
-    aspect-ratio: 50/50;
-    z-index: 1;
     transition: transform 250ms ease-in-out;
-
-    > svg {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      -ms-transform: translateY(-50%) translateX(-50%);
-      transform: translateY(-50%) translateX(-50%);
-    }
+    aspect-ratio: 1/1;
 
     &:hover {
       -ms-transform: rotate(-20deg);
